// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddToWatchlistButton component should match snapshot 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-49qm ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="book"
        class="anticon anticon-book"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="book"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zM668 345.9L621.5 312 572 347.4V124h96v221.9z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`AddToWatchlistButton component should match snapshot with other data 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-49qm ant-btn-circle ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="book"
        class="anticon anticon-book"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="book"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zm-260 72h96v209.9L621.5 312 572 347.4V136zm220 752H232V136h280v296.9c0 3.3 1 6.6 3 9.3a15.9 15.9 0 0022.3 3.7l83.8-59.9 81.4 59.4c2.7 2 6 3.1 9.4 3.1 8.8 0 16-7.2 16-16V136h64v752z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;
